# bookit

./: .envrc.sh  .vimspector.json  Cargo.toml  README.md
src/: main.rs
tests/: test_bookit.rs  test_docket.rs
tools/: rofi-bookit-menu
