[package]
name = "docket"
version = "0.1.0"
authors = ["nate-wilkins <nate-wilkins@code-null.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dirs = "1.0.5"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
