[package]
name = "docket"
version = "0.1.0"
authors = ["nate-wilkins <nate-wilkins@code-null.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.1"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
