[package]
name = "bookit"
version = "2.0.0"
description = "Fast and simple bookmark manager for your operating system."
license-file = "LICENSE"
documentation = "https://github.com/Nate-Wilkins/bookit"
homepage = "https://github.com/Nate-Wilkins/bookit"
repository = "https://github.com/Nate-Wilkins/bookit"
authors = ["nate-wilkins <nate-wilkins@code-null.com>"]

[dependencies]
log = "0.4.17"
regex = "1.5"
anyhow = "1.0.38"
clap = "2.33.1"
clap_complete = "4.0.7"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
env_logger = "0.10.0"
shlex = "1.1.0"
temp-file = "0.1.7"
fsutils = "0.1.7"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
pretty_assertions = "1.3.0"
tempfile = "3.3.0"
